<resources>
    <string name="app_name">Port And Starboard</string>
    <string name="show_left_name">SHOW LEFT NAME</string>
    <string name="how_to_navigate_a_ship">How to navigate a ship</string>
    <string name="show_right_name">SHOW RIGHT NAME</string>
    <string name="which_side_of_the_ship_is_the_following">Which side of the ship is the following?</string>
    <string name="means_right">MEANS RIGHT</string>
    <string name="means_left">MEANS LEFT</string>
    <string name="port_or_starboard">%1$s</string>
    <string name="port">Port</string>
    <string name="starboard">Starboard</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect! :(</string>
    <string name="logPortCorrect">User guess of Port was correct!</string>
    <string name="logPortIncorrect">User guess of Port was incorrect!</string>
    <string name="logSBCorrect">User guess of Starboard was correct!</string>
    <string name="logSBIncorrect">User guess of Starboard was incorrect!</string>
    <string name="showPort">Port(left) is Red</string>
    <string name="showStarboard">Starboard(right) is Green</string>
</resources>
