<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calvin.portandstarboard.MainActivity">

    <TextView
        android:text="@string/how_to_navigate_a_ship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textAlignment="center" />

    <Button
        android:text="@string/show_left_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leftNameBtn"
        android:layout_below="@+id/Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/show_right_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rightNameBtn"
        android:layout_below="@+id/Title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:id="@+id/Question"
        android:layout_below="@+id/leftNameBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/which_side_of_the_ship_is_the_following" />

    <Button
        android:text="@string/means_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rightAnsBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/means_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leftAnsBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionCont"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/port_or_starboard" />

</RelativeLayout>
